# famcs-academic-archive

./: .gitignore  README.md  main.py
1st_year/C++/: README.md
1st_year/C++/Lab1/: Lab1.cpp
1st_year/C++/Lab2/: Lab2 Additional Task.cpp  Lab2.cpp
1st_year/C++/Lab3/: Lab3.cpp
1st_year/C++/Lab4/: Lab4.cpp
1st_year/C++/Lab5/: Lab5.cpp
1st_year/C++/Lab6/: Input.txt  Lab6.cpp
1st_year/C++/Lab7/: Header.h  function.cpp  main.cpp
1st_year/C++/Lab8/: Lab8.cpp
1st_year/C++/OOP_Lab3/: OOP_Lab3.cpp
1st_year/C++/OOP_Lab4/: Activists.txt  Data.txt  Header.h  OOP_Lab4.cpp  Students.txt
1st_year/C++/REGEX_Lab5/: MAC-Address.txt  REGEX_Lab5.cpp
1st_year/C++/STL_Lab1/: STL_Lab1.cpp
1st_year/C++/STL_Lab2/: STL_Lab2.cpp
2nd_year/Assembler/: README.md
2nd_year/Assembler/ASM_Lab1/: ASM_Lab1.cpp  ASM_Laba1-3.asm  README.md
2nd_year/Assembler/ASM_Lab2/: ASM_Lab2.cpp  README.md
2nd_year/Assembler/ASM_Lab3/: ASM_Laba1-3.cpp  README.md
2nd_year/Java/: README.md
2nd_year/Java/Lab1/: README.md  pom.xml
2nd_year/Java/Lab1/src/main/java/org/famcs/JavaLaba1/: Java_Laba1.java  TaylorClass.java
2nd_year/Java/Lab1/src/test/java/org/famcs/JavaLaba1/: TestTaylorClass.java
2nd_year/Java/Lab3/: README.md  input.txt  output.txt  pom.xml
2nd_year/Java/Lab3/src/main/java/org/famcs/JavaLaba3/: Java_Laba3.java  StringEditor.java
2nd_year/Operating_Systems/: README.md
2nd_year/Operating_Systems/Lab1/: .gitignore  CMakeLists.txt  README.md  main.cpp
2nd_year/Operating_Systems/Lab1/Creator/: CMakeLists.txt  creator.cpp
2nd_year/Operating_Systems/Lab1/Reporter/: CMakeLists.txt  reporter.cpp
2nd_year/Operating_Systems/Lab1/include/: employee.h
2nd_year/Operating_Systems/Lab1/tests/: CMakeLists.txt  reporter_test.cpp
2nd_year/Operating_Systems/Lab2/: CMakeLists.txt  README.md  main.cpp
2nd_year/Operating_Systems/Lab2/Threads/: CMakeLists.txt  threads.cpp  threads.h
2nd_year/Operating_Systems/Lab2/include/: ThreadData.h
2nd_year/Operating_Systems/Lab2/tests/: CMakeLists.txt  thread_test.cpp
2nd_year/Operating_Systems/Lab3/: .gitignore  CMakeLists.txt  README.md  main.cpp
2nd_year/Operating_Systems/Lab3/Marker/: CMakeLists.txt  marker.cpp
2nd_year/Operating_Systems/Lab3/include/: globals.h
2nd_year/Operating_Systems/Lab3/tests/: CMakeLists.txt  marker_test.cpp
2nd_year/Operating_Systems/Lab4/: .gitignore  CMakeLists.txt  README.md  globals.cpp  main.cpp
2nd_year/Operating_Systems/Lab4/Receiver/: CMakeLists.txt  receiver.cpp
2nd_year/Operating_Systems/Lab4/Sender/: CMakeLists.txt  sender.cpp
2nd_year/Operating_Systems/Lab4/include/: globals.h
2nd_year/Operating_Systems/Lab4/tests/: CMakeLists.txt
2nd_year/Operating_Systems/Lab5/: CMakeLists.txt  README.md  client.cpp  main.cpp
3rd_year/Functional_Analysis/: README.md
3rd_year/Functional_Analysis/Lab1/: README.md  task1.py  task2.py  task3.py
3rd_year/Functional_Analysis/Lab2/: README.md  task.py
3rd_year/Functional_Analysis/Lab3/: README.md  task1.py  task2.py  task3.py
3rd_year/MSA/Lab1/: README.MD  lab1.ipynb
